--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <head>
+
+<head>
+    <link rel="icon" href="media/icon.png" />
     <link href="CSS/style.css" type="text/css" rel="stylesheet" />
     <script type="text/javascript" src="JS/jquery.min.js"></script>
     <script src="JS/external.js"></script>
@@ -21,4 +23,5 @@
     </div>
 
 </body>
+
 </html>
